# rpm

./: .gitignore  Cargo.toml  README  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: integration.yml  release.yml  rust-docs.yml  test.yml
scripts/: doc.sh  linux-installer.sh  linux.sh  macos-installer.sh  windows-installer.ps1
src/: client.rs  ipc.rs  main.rs  process.rs  store.rs
src/cli/: mod.rs
src/daemon/: db.rs  engine.rs  manager.rs  metrics.rs  mod.rs  monitor.rs
src/ipc/: messages.rs  mod.rs
src/os/: mod.rs
src/os/android/: ipc.rs  mod.rs
src/os/linux/: ipc.rs
src/os/macos/: ipc.rs  mod.rs
src/os/windows/: ipc.rs
src/tui/: input.rs  mod.rs  print.rs
tests/: integration_tests.rs  mock_server.py
