[package]
name = "rpm"
version = "0.1.0"
edition = "2024"

[features]
default = []
rt-multi-thread = ["tokio/rt-multi-thread"]
macros = ["tokio/macros"]
io-util = ["tokio/io-util"]
fs = ["tokio/fs"]
sync = ["tokio/sync"]
time = ["tokio/time"]
process = ["tokio/process"]
net = ["tokio/net"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
sysinfo = "0.39.2"
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
    "sync",
    "time",
    "process",
    "net",
    "signal",
] }
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
strip = "none"
debug = true
